--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -69,10 +69,10 @@
             </div>
             <div class="row">
                 <div class="col-sm-5 col-sm-offset-1">
-                    <p class="pKiri">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque saepe doloribus doloremque voluptate, aut non odit provident autem architecto vitae consectetur. Tempora laudantium necessitatibus illo, rerum eaque veniam ea! Pariatur.</p>
+                    <p class="pKiri">second year student of computer system (center for Computing and Information Technology) in raharja university.</p>
                 </div>
                 <div class="col-sm-5">
-                    <p class="pKanan">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero maiores praesentium quia deserunt aspernatur? Aperiam, voluptas, possimus consequatur nihil iusto, blanditiis doloremque voluptatum a quia officia molestiae excepturi deserunt corporis.</p>
+                    <p class="pKanan">Right now I currently website developer and being part of start up to impact society. I'm a forever learner and welcome any recommendations on things to do that challenge me always to have a growth mindset. deepening about website developer. I have a deep interest in learning about website developer and being part of start up to impact society. I'm a forever learner and welcome any recommendations on things to do that challenge me always to have a growth mindset.</p>
                 </div>
             </div>
         </div>
